--- a/cryptomany/css/style.css
+++ b/cryptomany/css/style.css
@@ -1076,6 +1076,15 @@ template {
   border-radius: 15px;
 }
 
+.news__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .news__img img {
   max-width: 100%;
 }
@@ -1110,7 +1119,7 @@ template {
   background: #262626;
 }
 
-.footer__items {
+.footer__box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1119,7 +1128,8 @@ template {
           justify-content: space-between;
 }
 
-.footer__item:first-child {
+.footer__about {
+  margin-right: 80px;
   max-width: 260px;
 }
 
@@ -1160,8 +1170,18 @@ template {
   margin-right: 15px;
 }
 
-.footer__links {
-  width: 185px;
+.footer__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 70%;
+}
+
+.footer__item {
+  margin: 0 15px;
 }
 
 .footer__links a {
@@ -1328,13 +1348,11 @@ template {
     margin: 0 10px;
     padding: 35px 15px 20px;
   }
-  .faq__items {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .faq__item {
+    width: 49%;
   }
   .news__item {
-    margin: 0 15px;
+    margin: 0 10px;
   }
 }
 
@@ -1385,9 +1403,23 @@ template {
   .comment__text {
     font-size: 14px;
   }
+  .news__date {
+    font-size: 14px;
+  }
+  .news__subtitle {
+    font-size: 17px;
+  }
+  .news__text {
+    font-size: 14px;
+  }
   .footer__items {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    width: 55%;
+  }
+  .footer__item {
+    margin-top: 15px;
+    width: 42%;
   }
 }
 
@@ -1559,6 +1591,14 @@ template {
     margin-top: 30px;
     width: 47%;
   }
+  .faq__items {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .faq__item {
+    width: 90%;
+  }
   .news__items {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1568,7 +1608,10 @@ template {
   }
   .news__item {
     margin-top: 30px;
-    width: 45%;
+    width: 47%;
+  }
+  .footer .footer__about {
+    margin-right: 0;
   }
 }
 
@@ -1585,12 +1628,30 @@ template {
   .comment__item {
     width: 90%;
   }
-  .faq__item {
-    width: 90%;
+  .faq__item__button {
+    font-size: 16px;
+  }
+  .faq__item__button:after {
+    width: 27px;
+    height: 18px;
+    background-size: 100%;
+  }
+  .faq__item__content {
+    font-size: 14px;
+    line-height: 20px;
   }
   .news__item {
-    margin: 30px 0 0;
     width: 90%;
+  }
+  .footer__box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__items {
+    margin-top: 20px;
+    width: 95%;
   }
 }
 
@@ -1670,9 +1731,50 @@ template {
     font-size: 13px;
   }
   .faq__item {
+    margin-top: 20px;
     width: 100%;
   }
+  .faq__item__button {
+    padding: 30px 20px;
+    font-size: 13px;
+  }
+  .faq__item__button:after {
+    right: 10px;
+    width: 17px;
+    height: 12px;
+  }
+  .faq__item__content {
+    padding: 0 20px 20px;
+    font-size: 13px;
+  }
   .news__item {
+    margin: 30px 0 0;
     width: 100%;
+  }
+  .news__date {
+    font-size: 12px;
+  }
+  .news__subtitle {
+    font-size: 16px;
+  }
+  .news__text {
+    font-size: 13px;
+  }
+  .footer .footer__subtitle {
+    font-size: 16px;
+  }
+  .footer .footer__text {
+    font-size: 13px;
+  }
+  .footer .footer__items {
+    width: 100%;
+  }
+  .footer .footer__item {
+    margin: 15px 0 0;
+    width: 100%;
+  }
+  .footer .footer__links a {
+    font-size: 13px;
+    line-height: 20px;
   }
 }
