--- a/geostroy/css/style.css
+++ b/geostroy/css/style.css
@@ -1392,10 +1392,38 @@ template {
 }
 
 .reviews__text {
+  position: relative;
   margin-top: 25px;
+  height: 175px;
   font-size: 14px;
   line-height: 150%;
   color: #000000;
+  overflow: hidden;
+}
+
+.reviews__text_more:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(white));
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, white 100%);
+}
+
+.reviews__text_more + .reviews__bottom .reviews__readmore {
+  opacity: 1;
+}
+
+.reviews__text_more.active {
+  overflow: visible;
+  height: auto;
+}
+
+.reviews__text_more.active:before {
+  visibility: hidden;
 }
 
 .reviews__bottom {
@@ -1409,6 +1437,8 @@ template {
 }
 
 .reviews__readmore {
+  cursor: pointer;
+  opacity: 0;
   font-weight: 500;
   font-size: 14px;
   color: #1673BB;
