--- a/geostroy/css/style.css
+++ b/geostroy/css/style.css
@@ -561,6 +561,10 @@ template {
   background: rgba(0, 0, 0, 0.55);
 }
 
+.hide {
+  overflow: hidden;
+}
+
 .feedform {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2615,9 +2619,6 @@ template {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     width: 100%;
     height: 100vh;
     background: #fff;
@@ -2632,17 +2633,21 @@ template {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-top: 70px;
     width: 100%;
   }
   .header__menu > li {
     height: 45px;
     width: 100%;
   }
+  .header__menu a {
+    font-size: 19px;
+  }
   .header__submenu {
     padding-right: 0;
   }
   .header__submenu:before {
-    right: 60px;
+    right: 70px;
   }
   .header__burger {
     display: block;
