--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -2188,6 +2188,9 @@ body {
   }
 }
 @media (max-width: 991px) {
+  .section__offset {
+    margin-top: 90px;
+  }
   .header {
     position: relative;
   }
@@ -2312,6 +2315,9 @@ body {
     margin-top: 25px;
     width: 65%;
   }
+  .exp {
+    margin-top: 90px;
+  }
   .exp__box {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2323,6 +2329,7 @@ body {
     width: 65%;
   }
   .exp__items {
+    margin-top: 25px;
     width: 100%;
   }
   .action__box__inner {
@@ -2349,6 +2356,12 @@ body {
     height: 125px;
     background-size: 100%;
   }
+  .biography__info {
+    width: 90%;
+  }
+  .biography__items, .biography__item {
+    margin-top: 30px;
+  }
   .biography__round {
     width: 120px;
     height: 120px;
@@ -2359,6 +2372,9 @@ body {
   }
   .biography__descr {
     width: 400px;
+  }
+  .reviews__descr {
+    width: 90%;
   }
   .reviews__items:before {
     display: none;
@@ -2472,8 +2488,18 @@ body {
     -o-object-fit: cover;
        object-fit: cover;
   }
+  .reviews__descr {
+    margin-top: 20px;
+    width: 100%;
+  }
+  .reviews__items {
+    margin-top: 35px;
+  }
   .reviews__item {
     width: 100%;
+  }
+  .reviews .slick-dots {
+    margin-top: 35px;
   }
   .footer__top {
     -webkit-box-orient: vertical;
@@ -2520,6 +2546,16 @@ body {
   }
 }
 @media (max-width: 575px) {
+  .section__offset {
+    margin-top: 60px;
+  }
+  .section__label {
+    font-size: 14px;
+  }
+  .section__title {
+    font-size: 26px;
+    line-height: 34px;
+  }
   .header__box {
     padding: 20px 10px;
   }
@@ -2561,6 +2597,9 @@ body {
   .promo__descr {
     width: 100%;
   }
+  .exp {
+    margin-top: 60px;
+  }
   .exp__item {
     margin-top: 20px;
   }
@@ -2596,6 +2635,15 @@ body {
     width: 58px;
     height: 100px;
   }
+  .biography__subtitle {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .biography__text {
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 22px;
+  }
   .biography__item {
     width: 100%;
   }
@@ -2609,7 +2657,24 @@ body {
     margin: 15px 0;
     height: 60px;
   }
+  .biography__company {
+    padding: 20px 20px 0;
+    font-size: 14px;
+  }
+  .biography__post {
+    padding: 0 20px;
+    font-size: 18px;
+  }
+  .biography__img {
+    margin-top: 20px;
+  }
   .biography__img img {
-    height: 150px;
+    height: 220px;
+  }
+  .biography__content {
+    margin-top: 20px;
+    padding: 0 20px 20px;
+    font-size: 14px;
+    line-height: 22px;
   }
 }
